--- a/laboite/templates/site_base.html
+++ b/laboite/templates/site_base.html
@@ -4,6 +4,9 @@
 {% load pinax_webanalytics_tags %}
 {% load i18n %}
 
+{% block head_title_base %}{% if SITE_NAME %}{{ SITE_NAME }} · {% endif %}{% block head_title %}{% endblock %}{% endblock %}
+
+{% block site_brand %}<a class="navbar-brand" href="{% url "home" %}" style="font-family: 'Kreon', serif; font-size: 150%">{{ SITE_NAME }}</a>{% endblock %}
 
 {% block styles %}
     {% include "_styles.html" %}
@@ -13,7 +16,6 @@
 {% block extra_head_base %}
     {% block extra_head %}{% endblock %}
 {% endblock %}
-
 
 {% block footer %}
     {% include "_footer.html" %}
