--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -8,5 +8,12 @@
 // Account
 @import "account.less";
 
+// laboite
+@import "laboite.less";
+
 // Site overrides
 @import "custom.less";
+
+// Bootswatch overrides
+@import "variables.less";
+@import "bootswatch.less";
