--- a/laboite/templates/_account_bar.html
+++ b/laboite/templates/_account_bar.html
@@ -1,17 +1,29 @@
 {% load i18n %}
 {% load account_tags %}
+{% load gravatar %}
 
+{% block styles %}
+<style>
+    .gravatar {
+        border-radius: 50%;
+        border: 1px solid #777;
+    }
+</style>
+{% endblock %}
 
 <ul class="nav navbar-nav pull-right">
     {% if request.user.is_authenticated %}
-        <p class="navbar-text">
-            <i class="fa fa-user"></i> {% user_display request.user %}
-        </p>
         <li>
-            <a href="{% url 'account_settings' %}"><i class="fa fa-cog"></i> {% trans "Settings" %}</a>
+            <a href="{% url 'account_settings' %}">{% gravatar request.user.email 20 %} {% user_display request.user %}</a>
         </li>
         <li>
-            <a id="account_logout" href="{% url 'account_logout' %}"><i class="fa fa-power-off"></i> {% trans "Log out" %}</a>
+            <a href="{% url 'boites:list' %}"><i class="fa fa-gears"></i> {% trans "Mes boîtes" %}</a>
+        </li>
+        {% if request.user.is_staff %}
+            <li><a href="{% url THEME_ADMIN_URL|default:"admin:index" %}"><i class="fa fa-id-card"></i> {% trans "Admin" %}</a></li>
+        {% endif %}
+        <li>
+            <a id="account_logout" href="{% url 'account_logout' %}"><i class="fa fa-sign-out"></i> {% trans "Log out" %}</a>
         </li>
     {% else %}
         <li><a href="{% url 'account_login' %}">{% trans "Log in" %}</a></li>
