--- a/laboite/templates/_footer.html
+++ b/laboite/templates/_footer.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-{% trans "&copy; 2016 laboite.pro" %}
+<i class="fa fa-creative-commons"></i> {% now "Y" %} - {% trans "laboîte project" %}
