Fix DAL display
Refer to https://django-autocomplete-light.readthedocs.io/en/master/tutorial.html#using-autocompletes-outside-the-admin and example https://github.com/yourlabs/django-autocomplete-light/blob/master/test_project/select2_outside_admin/templates/select2_outside_admin.html

--- a/apps/bus/laboite/apps/bus/templates/laboite.apps.bus/appbus_form.html
+++ b/apps/bus/laboite/apps/bus/templates/laboite.apps.bus/appbus_form.html
@@ -1,5 +1,5 @@
 {% extends "boites/base.html" %}
-
+{% load static %}
 {% load i18n %}
 {% load bootstrap %}
 {% load humanize %}
@@ -19,4 +19,9 @@
             </form>
         </div>
     </div>
+{% endblock %}
+
+{% block footer %}
+    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    {{ form.media }}
 {% endblock %}
