Migrated bikes app

--- a/static/src/less/laboite.less
+++ b/static/src/less/laboite.less
@@ -52,3 +52,27 @@ body.boite-apps .boite-apps {
     background: inherit;
     left: 20px;
 }
+
+.boite span.select2-selection {
+    height: 45px;
+    padding: 10px 15px;
+    border: 2px solid #dce4ec;
+}
+
+.boite span.select2-selection:focus,
+.boite .select2-container--open span.select2-selection {
+    border-color: #2C3E50;
+}
+
+.boite span.select2-selection span.select2-selection__arrow {
+    height: 100%;
+}
+
+.boite span.select2-selection span.select2-selection__rendered {
+    line-height: 22px;
+    padding: 0;
+}
+
+.boite span.select2-selection span.select2-selection__arrow b {
+    margin-top: -4px;
+}
