--- a/boites/templates/apps/app_form.html
+++ b/boites/templates/apps/app_form.html
@@ -1,5 +1,6 @@
 {% extends "boites/base.html" %}
 
+{% load static %}
 {% load i18n %}
 {% load bootstrap %}
 {% load humanize %}
@@ -19,4 +20,9 @@
             </form>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    {{ form.media }}
 {% endblock %}
