--- a/boites/templates/apps/app_confirm_delete.html
+++ b/boites/templates/apps/app_confirm_delete.html
@@ -9,9 +9,13 @@
 
 {% block body %}
     <div class="row">
+        <ul class="breadcrumb">
+            <li><a href="{% url 'boites:list' %}">{% trans "Mes boîtes" %}</a></li>
+            <li><a href="{% url 'boites:update' boite_id %}">{{ boite.name }}</a></li>
+            <li><a href="{% url 'boites:apps' boite_id %}">Apps</a></li>
+            <li class="active">{% trans "Supprimer app" %}</li>
+        </ul>
         <div class="col-md-5">
-            <h1>{% trans "Supprimer ?" %}</h1>
-
             <p>{% trans "Êtes vous sûr de vouloir supprimer cette app ?" %}</p>
 
             <form method="post" action="" autocapitalize="off">
