--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -10,9 +10,12 @@
 
 {% block body %}
     <div class="row">
+        <ul class="breadcrumb">
+            <li><a href="{% url 'boites:list' %}">{% trans "Mes boîtes" %}</a></li>
+            <li class="active">{{ boite.name }}</li>
+        </ul>
         <div class="col-md-5">
             <form method="POST" action="{% url 'boites:update' object.id %}">
-                <legend>{{ object.name }}</legend>
                 {% csrf_token %}
                 {{ form|bootstrap }}
                 <div class="form-group">
@@ -67,33 +70,5 @@
                 <button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
             </form>
         </div>
-        {% if apps %}
-            <div class="col-md-7">
-                <legend>Apps</legend>
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>{% trans "Nom" %}</th>
-                            <th style="text-align: right;">{% trans "Actions" %}</th>
-                          </tr>
-                    </thead>
-                    <tbody>
-                        {% for app in apps %}
-                            <tr{% if app.pk and app.enabled %} class="success"{% elif app.pk and not app.enabled %} class="warning"{% endif %}>
-                                <td>{{ app.verbose_name }} {{ app.model }}</td>
-                                <td style="text-align: right;">
-                                    {% if app.pk %}
-                                    <a href="apps/{{ app.app_label|slice:"13:" }}/{{ app.pk }}/" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
-                                    <a href="apps/{{ app.app_label|slice:"13:" }}/{{ app.pk }}/delete/" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></a>
-                                    {% else %}
-                                    <a href="apps/{{ app.app_label|slice:"13:" }}/create/" class="btn btn-success btn-xs"><i class="fa fa-plus-circle"></i></a>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        {% endif %}
     </div>
 {% endblock %}
