Apps tiles : small bugs fixed

--- a/boites/templates/boites/boite_apps.html
+++ b/boites/templates/boites/boite_apps.html
@@ -24,6 +24,7 @@
                     {% endwith %}
                 {% endif %}
             {% endfor %}
+            {% if show_create_button %}
             <a href="create">
                 <div class="col-md-3">
                     <div class="panel panel-success">
@@ -33,6 +34,7 @@
                     </div>
                 </div>
             </a>
+            {% endif %}
         </div>
         {% endif %}
     </div>
