AppCustom bugs fixed and AppParking added

--- a/apps/traffic/laboite/apps/traffic/templates/traffic_app.html
+++ b/apps/traffic/laboite/apps/traffic/templates/traffic_app.html
@@ -2,5 +2,5 @@
 
 {% load i18n %}
 
-{% block app_icon %}car{% endblock %}
+{% block app_icon %}road{% endblock %}
 {% block app_description %}{% trans "Affiche la durée d'un trajet en fonction du traffic" %}{% endblock %}
