--- a/boites/templates/boites/boite_app.html
+++ b/boites/templates/boites/boite_app.html
@@ -3,7 +3,7 @@
     <div class="col-md-3">
         <div class="panel panel-app">
             <div class="panel-heading"><strong><i class="fa fa-{% block app_icon %}{% endblock %}" aria-hidden="true"></i>&nbsp;{{ app.verbose_name }}</strong></div>
-            <div class="panel-body" style="height:128px;">
+            <div class="panel-body" style="height:128px;{% if app.pk == "create" %} border-bottom-right-radius: 3px; border-bottom-left-radius: 3px;{% endif %}">
                 {% block app_description %}{% endblock %}
             </div>
             {% if app.pk != "create" %}
