--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -8,6 +8,9 @@
 // Account
 @import "account.less";
 
+// bootstrap-switch
+@import "bootstrap-switch.less";
+
 // laboite
 @import "laboite.less";
 
