Static media bug fixed thanks to @vrialland

--- a/laboite/templates/homepage.html
+++ b/laboite/templates/homepage.html
@@ -31,7 +31,7 @@
                     {% endif %}
                 </div>
                 <div class="col-lg-4">
-                    <img width="100%" src="{{ STATIC_URL }}../media/laboite_specs.svg" alt="laboîte specs">
+                    <img width="100%" src="{{ STATIC_URL }}laboite_specs.svg" alt="laboîte specs">
                 </div>
             </div>
         </div>
@@ -40,21 +40,21 @@
         <div class="container">
             <div class="feature-columns">
                 <div>
-                    <img class="img-circle" src="{{ STATIC_URL }}../media/leds.svg" alt="app" style="width: 100px; height: 100px;"><br>
+                    <img class="img-circle" src="{{ STATIC_URL }}leds.svg" alt="app" style="width: 100px; height: 100px;"><br>
                     <h2>{% blocktrans %}Vos données !{% endblocktrans %}</h2>
                     {% blocktrans %}
                     Avec laboîte, toutes les données qui vous importent sont là quand vous regardez l'heure !
                     {% endblocktrans %}
                 </div>
                 <div>
-                    <img class="img-circle" src="{{ STATIC_URL }}../media/arduino.svg" alt="Visualisation" style="width: 100px; height: 100px;"><br>
+                    <img class="img-circle" src="{{ STATIC_URL }}arduino.svg" alt="Visualisation" style="width: 100px; height: 100px;"><br>
                     <h2>{% blocktrans %}Compatible Arduino{% endblocktrans %}</h2>
                     {% blocktrans %}
                     laboîte est basée sur la plateforme Arduino. Ce qui signifie que vous pouvez modifier son code et améliorer votre boîte !
                     {% endblocktrans %}
                 </div>
                 <div>
-                    <img class="img-circle" src="{{ STATIC_URL }}../media/opensource.svg" alt="Visualisation" style="width: 100px; height: 100px;"><br>
+                    <img class="img-circle" src="{{ STATIC_URL }}opensource.svg" alt="Visualisation" style="width: 100px; height: 100px;"><br>
                     <h2>{% blocktrans %}Ouvert !{% endblocktrans %}</h2>
                     {% blocktrans %}
                     Le code de cette application web est ouvert et libre. Il est disponible <a href="https://github.com/laboiteproject/laboite-backend">ici</a> sous licence <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPLv3</a>
