--- a/laboite/apps/metro/templates/metro_app.html
+++ b/laboite/apps/metro/templates/metro_app.html
@@ -3,4 +3,12 @@
 {% load i18n %}
 
 {% block app_icon %}subway{% endblock %}
+{% block app_data %}
+	{% if app.instance.failure %}
+		{% trans "Rétablissement dans :" %} {{ app.instance.recovery_time|default:"0" }}
+		<i class="fa fa-caret-up text-danger" aria-hidden="true"></i>
+	{% else %}
+		<span class="badge">{% trans "OK" %}</span>
+	{% endif %}
+{% endblock %}
 {% block app_description %}{% trans "Affiche le statut du métro" %}{% endblock %}
