--- a/static/src/less/laboite.less
+++ b/static/src/less/laboite.less
@@ -62,6 +62,12 @@ body.boite-apps .boite-apps {
   border-bottom-color: lighten(@brand-primary, 15%);
 }
 
+.panel-body .badge {
+    color: #476481;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 3px;
+}
+
 #add-app {
     height:221.43px;
     color:#fff;
