--- a/laboite/apps/alarm/templates/alarm_app.html
+++ b/laboite/apps/alarm/templates/alarm_app.html
@@ -3,4 +3,7 @@
 {% load i18n %}
 
 {% block app_icon %}bell{% endblock %}
+{% block app_data %}
+	<span class="badge">{{ app.instance.heure }}:{{ app.instance.minutes }}</span>
+{% endblock %}
 {% block app_description %}{% trans "Permet de spécifier une heure de réveil" %}{% endblock %}
