--- a/laboite/apps/bikes/templates/bikes_app.html
+++ b/laboite/apps/bikes/templates/bikes_app.html
@@ -3,5 +3,7 @@
 {% load i18n %}
 
 {% block app_icon %}bicycle{% endblock %}
-
+{% block app_data %}
+  <span class="badge">{{ app.instance.bikes }}/{{ app.instance.slots }}</span>
+{% endblock %}
 {% block app_description %}{% trans "Affiche le nombre de vélos disponibles à votre station" %}{% endblock %}
