--- a/laboite/apps/wifi/templates/wifi_app.html
+++ b/laboite/apps/wifi/templates/wifi_app.html
@@ -4,7 +4,7 @@
 
 {% block app_icon %}wifi{% endblock %}
 {% block app_data %}
-	<span class="badge">{{ app.app_instances.first.ssid }}</span><br>
+	<span class="badge">{{ app.instance.ssid }}</span><br>
 	{{ app.instance.preshared_key }}
 {% endblock %}
 {% block app_description %}{% trans "Affiche les informations de votre réseau wifi" %}{% endblock %}
