--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load bootstrap %}
 {% load humanize %}
+{% load static %}
 
 {% block body_class %}boite boite-update{% endblock %}
 
@@ -10,7 +11,7 @@
 
 {% block body %}
     <div class="row">
-        <ul class="breadcrumb">
+        <ul class="breadcrumb hidden-xs hidden-sm">
             <li><a href="{% url 'boites:list' %}">{% trans "Mes boîtes" %}</a></li>
             <li class="active">{{ boite.name }}</li>
         </ul>
@@ -18,6 +19,24 @@
             <form method="POST" action="{% url 'boites:update' object.id %}">
                 {% csrf_token %}
                 {{ form|bootstrap }}
+                <div class="form-group">
+                    <label class="control-label" for="led">{% trans "Simulateur" %}</label>
+                    <div class="led">
+                        <ul></ul>
+                    </div>
+                    <div class="row">
+                        <div class="btn-group btn-group-centered pull-right" style="margin-top: 4px;">
+                            {% if previous_tile %}<a href="?tile={{ previous_tile.id }}" class="btn btn-sm btn-info"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>{% endif %}
+                            <a href="{% url 'boites:tile' boite_id current_tile.id %}" class="btn btn-sm btn-info"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                            <a href="{% url 'boites:delete_tile' boite_id current_tile.id %}" class="btn btn-sm btn-info"><i class="fa fa-times" aria-hidden="true"></i></a>
+                            {% if next_tile %}
+                                <a href="?tile={{ next_tile.id }}" class="btn btn-sm btn-info"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                            {% else %}
+                                <a href="{% url 'boites:create_tile' boite_id current_tile.id %}" class="btn btn-sm btn-info"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="control-label" for="id_api_key">{{ api_key.verbose_name }}</label>
                     <div class=" ">
@@ -71,4 +90,78 @@
             </form>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {% include "_scripts.html" %}
+    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}font.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}gfx.js"></script>
+    <script type="text/javascript">
+        var matrixWidth = 32,
+            matrixHeight= 16;
+
+        $(document).ready(function(){
+            for(var pixels = 0; pixels < matrixWidth*matrixHeight;	pixels++)
+                $(".led ul").append("<li></li>");
+
+            $(".led").css("width", matrixWidth*11+6);
+            $(".led").css("height", matrixHeight*11+7);
+
+            $.get( "tiles/{{ current_tile.id }}/?format=json", function( data ) {
+                $.each(data, function( label, app ) {
+                    if(label == 'apps') {
+                        $.each(app, function( app_label, data ) {
+                            $.each(data, function( key, value ) {
+                                if(value.type == 'icon')
+                                    draw(value.x, value.y, value.content, value.width, value.height, '#fff');
+                                if(value.type == 'animation') {
+                                    console.log(value);
+                                    var i =0;
+                                    setInterval(function() {
+                                        console.log(value);
+                                        fillRect(value.x, value.y, value.width, value.height, '#444');
+                                        draw(value.x, value.y, value.content[i], value.width, value.height, '#fff');
+                                        i++;
+                                        if(i >= value.content.length)
+                                            i=0;
+                                    }, {{ current_tile.duration }} * 1000 / value.content.length);
+                                }
+                                if(value.type == 'text') {
+                                    if(!value.scrolling)
+                                        printText(value.x, value.y, value.content.toString(), '#fff');
+                                    else {
+                                        x = matrixWidth;
+                                        setInterval(function() {
+                                            if(x > -(value.content.length * 5)) {
+                                                printText(x, value.y, value.content, '#fff', '#444');
+                                                x--;
+                                            }
+                                            else x = matrixWidth;
+                                        }, {{ current_tile.duration }} * 1000 / (value.content.length * 5 + matrixWidth) );
+                                    }
+                                }
+                            });
+                        });
+                    }
+                    else {
+                        // TODO: Gérer ça
+                        // console.log(label);
+                    }
+                });
+            });
+        });
+
+        function flipSprite() {
+            if(flip == 1) {
+                reset();
+                draw(0, 0, bitmap1, 14, 16, '#fff');
+            }
+            else {
+                reset();
+                draw(0, 0, bitmap2, 14, 16, '#fff');
+            }
+            flip = ~flip;
+        }
+    </script>
 {% endblock %}
