--- a/laboite/templates/_footer.html
+++ b/laboite/templates/_footer.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-<i class="fa fa-creative-commons"></i> {% now "Y" %} - {% trans "laboîte project" %}
+<i class="fa fa-creative-commons"></i> {% now "Y" %} - Redgick technologies
