--- a/static/src/less/laboite.less
+++ b/static/src/less/laboite.less
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Kreon');
+
 body.boite-update .boite-update,
 body.boite-delete .boite-delete,
 body.boite-apps .boite-apps {
@@ -73,4 +75,30 @@ body.boite-apps .boite-apps {
     color:#fff;
     text-align:center;
     background-color:#18BC9C;
+}
+
+// simulator alligator :)
+.led {
+	background: #222;
+	border-radius: 4px;
+	border: 1px solid #2C3E50;
+	border-width: 2px;
+	padding-left: 2px;
+	padding-bottom: 2px;
+}
+
+.led ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.led ul li {
+	float: left;
+	width: 8px;
+	height: 8px;
+	background: #444;
+	margin-right: 3px;
+	margin-top: 3px;
+	border-radius: 2px;
 }
